--- a/src/List/List.css
+++ b/src/List/List.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
 }
